# syscalls

./: Cargo.toml  README.md  build.rs  keyboard.rs  rust-toolchain.toml  sys.rs
.cargo/: config.toml
builders/: apps.rs  drivers.rs  fs_image.rs  services.rs
runtime/: crt0.S  linker.ld
rust-port/: build-sysroot.sh
scripts/: build-newlib.sh
src/: app.rs  ffi.rs  lib.rs
src/core/: .gitignore  Cargo.toml  audit.rs  build.rs  changelog  config.rs  contributing.md  core_build.rs  entry.rs  kernel.ld  kernel.rs  lib.rs  license  panic.rs  percpu.rs  readme.md  result.rs  security.md  smp.rs  x86_64-mochios.json
src/core/.cargo/: config.toml
src/core/.github/workflows/: check.yml
src/core/crates/PlugKit/plugkit/: Cargo.toml
src/core/crates/PlugKit/plugkit-macros/: Cargo.toml
src/core/crates/PlugKit/plugkit-macros/src/: lib.rs
src/core/crates/PlugKit/plugkit-sys/: Cargo.toml
src/core/crates/PlugKit/plugkit-sys/src/: lib.rs
src/core/crates/PlugKit/plugkit/src/: lib.rs
src/core/crates/abi/: Cargo.toml
src/core/crates/abi/src/: lib.rs
src/core/docs/: cexts.md  ipc.md  readme.md  signature.md  syscall.md
src/core/docs/plugkit/: about.md  api.md
src/core/examples/boot/: Cargo.toml
src/core/examples/boot/src/: main.rs
src/core/examples/fs/rootfs/: hello.txt
src/core/examples/fs/rootfs/config/: drivers.list  kernel.conf
src/core/examples/plugkit/test/: Cargo.toml  about.toml
src/core/examples/plugkit/test/src/: lib.rs  main.rs
src/core/examples/user/: Cargo.toml
src/core/examples/user/src/: captest_main.rs  lib.rs  main.rs
src/core/init/: mod.rs
src/core/interrupt/: idt.rs  mod.rs
src/core/kmod/: fs.rs  mod.rs  registry.rs
src/core/mem/: allocator.rs  frame.rs
src/core/modules/fs_cext/: Cargo.toml
src/core/modules/fs_cext/src/: main.rs
src/core/scripts/: cexts.sh  checkchangelog.pl  checkpanic.pl  generate_testdata.pl  rootfs.sh  runner.sh  signature_db.pl
src/core/src/: audit.rs  config.rs  cpu.rs  entry.rs  kernel.rs  lib.rs  percpu.rs  result.rs  smp.rs
src/core/src/capability/: mod.rs  path.rs
src/core/src/cext/: disk.rs  fs.rs  mod.rs  registry.rs
src/core/src/elf/: mod.rs
src/core/src/init/: fs.rs  mod.rs
src/core/src/interrupt/: apic.rs  idt.rs  mod.rs  timer.rs
src/core/src/mem/: frame.rs  gdt.rs  paging.rs
src/core/src/plugkit/: mod.rs  package.rs
src/core/src/policy/: mod.rs  signature.rs
src/core/src/syscall/: capability.rs  event.rs  exec.rs  fs.rs  io.rs  ipc.rs  mmio.rs  mod.rs  mouse.rs  pgroup.rs  process.rs  security.rs  signal.rs  syscall_entry.rs  task.rs  time.rs  types.rs
src/core/src/task/: context.rs  fd_table.rs  ids.rs  mod.rs  process.rs  scheduler.rs  thread.rs  usermode.rs
src/core/src/util/: ps2kbd.rs
src/core/syscall/: block.rs  exec.rs  fs.rs  io_port.rs  ipc.rs  mmio.rs  mod.rs  pgroup.rs  pipe.rs  process.rs  security.rs  types.rs
src/core/task/: context.rs  elf.rs  fd_table.rs  scheduler.rs  thread.rs
tests/: README.md
(+73 files in other folders)
