[package]
name = "mnu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "kernel"
path = "src/entry.rs"
test = false
bench = false
required-features = ["kernel-bin"]

[dependencies]
mnu-abi = { path = "../abi" }
linked_list_allocator = "0.10.5"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
spin = "0.9"
x86_64 = "0.15"

[features]
kernel-bin = []
kcfi = []
cet-ibt = []
cet-shadow-stack = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
