[package]
name = "mnu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
members = [
    "crates/PlugKit/plugkit",
    "crates/PlugKit/plugkit-macros",
    "crates/PlugKit/plugkit-sys",
    "examples/user",
    "examples/plugkit/test",
]
default-members = [".", "examples/user"]
exclude = ["examples/boot"]

[lib]
path = "src/lib.rs"
test = false
bench = false
doctest = false

[[bin]]
name = "kernel"
path = "src/entry.rs"
test = false
bench = false
required-features = ["kernel-bin"]

[target.'cfg(any(target_os = "none", target_os = "uefi"))'.dependencies]
ed25519-dalek = { version = "2.2.0", default-features = false, features = ["alloc"] }
mnu-abi = { path = "crates/abi" }
linked_list_allocator = "0.10.5"
sha2 = { version = "0.10", default-features = false, features = ["force-soft"] }
spin = "0.9"
x86_64 = "0.15"

[dependencies]
plugkit-sys = { path = "crates/PlugKit/plugkit-sys" }

[features]
default = ["kernel-bin"]
kernel-bin = []
kcfi = []
cet-ibt = []
cet-shadow-stack = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
