[package]
name = "boot"
version = "0.1.0"
edition = "2024"

[dependencies]
mnu-abi = { path = "../../crates/abi" }
spin = "0.9"
uefi = { version = "0.30", features = ["alloc", "global_allocator"] }
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

[[bin]]
name = "boot"
path = "src/main.rs"
test = false
bench = false
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
