[package]
name = "user"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
mnu-abi = { path = "../../crates/abi" }

[[bin]]
name = "user"
path = "src/main.rs"
test = false
bench = false
harness = false

[[bin]]
name = "captest"
path = "src/captest_main.rs"
test = false
bench = false
harness = false
