[package]
name = "plugkit-test"
version = "0.1.0"
edition = "2024"

[dependencies]
mnu-abi = { path = "../../../crates/abi" }
plugkit = { path = "../../../crates/PlugKit/plugkit" }

[[bin]]
name = "entry"
path = "src/main.rs"
test = false
bench = false
harness = false

[lib]
path = "src/lib.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
